--- a/.htaccess
+++ b/.htaccess
@@ -16,8 +16,8 @@ AuthType basic
 
 # If value of AuthUserFile doesn't begin with a slash, it is treated as
 # relative to the ServerRoot (not DocumentRoot!)
-AuthUserFile "/var/www/html/.htpasswd"
-#AuthGroupFile "/var/www/html/.htgroup"
+AuthUserFile "/var/www/html/protected/.htpasswd"
+#AuthGroupFile "/var/www/html/protected/.htgroup"
 
 # Each line of the user file contains a username followed by a colon, followed by the crypt()
 # encrypted password. The behavior of multiple occurrences of the same user is undefined. 
